Fixed Overflow Issue

--- a/css/header.css
+++ b/css/header.css
@@ -15,6 +15,10 @@ header {
   justify-content: center;
 }
 
+header img {
+  max-width: 100%;
+}
+
 header h1,
 header h2 {
   margin: 0;
