--- a/css/modal.css
+++ b/css/modal.css
@@ -1,6 +1,6 @@
 #modal {
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   background: #fff;
   z-index: -1;
   position: absolute;
@@ -22,8 +22,7 @@
   height: 30px;
   z-index: 1;
   cursor: pointer;
-  background:
-    #fff
+  background: #fff
     url(https://web.archive.org/web/20140225205601im_/http://images.apple.com/v/your-verse/a/images/close.png)
     no-repeat 0 0;
   background-size: 30px 60px;
